@@ -25,10 +25,15 @@ import java.io.DataInputStream;
 import java.io.OutputStream;
 import java.io.InputStream;
 import java.io.IOException;
+import java.io.FileNotFoundException;
+import android.content.Context;
 
 public class HexCsvAndroid
     extends HexCsv
 {
+    public static final String demo_prefix = "/android_asset/";
+    public static Context context = null;
+
     public HexCsvAndroid(String path, Progress prog)
         throws Exception, IOException
     {
@@ -40,23 +45,46 @@ public class HexCsvAndroid
     {
         return new FileOutputStream(path, true);
     }
+    
+    protected String getStatsName(String original)
+    {
+        return original.replace(File.separatorChar, '-');
+    }
 
     protected InputStream openIn(String path)
         throws IOException
     {
+        if ((context != null) && path.startsWith(demo_prefix)) {
+            String subpath = path.substring(demo_prefix.length());
+
+            if (subpath.endsWith("STATS.CSV")) {
+                try {
+                    return context.openFileInput(getStatsName(subpath));
+                } catch (FileNotFoundException e) {}
+            }
+
+            return context.getAssets().open(subpath);
+        }
+
         return new FileInputStream(path);
     }
 
     protected OutputStream openOut(String path)
         throws IOException
     {
+        if ((context != null) && path.startsWith(demo_prefix))
+        {
+            String subpath = path.substring(demo_prefix.length());
+            return context.openFileOutput(getStatsName(subpath), Context.MODE_PRIVATE);
+        }
+
         return new FileOutputStream(new File(path));
     }
 
     protected DataInputStream openDataIn(String path)
         throws IOException
     {
-        return new DataInputStream(new FileInputStream(path));
+        return new DataInputStream(openIn(path));
     }
 }
 
