@@ -1,3 +1,6 @@
+201002__ mnemogogo-1.1.2
+* Add support for Android demos.
+
 20100220 mnemogogo-1.1.1
 * Fix a bug in the export of sounds.
   (Thanks to Tom Nazarenko for report.)
